leaderboard tab spacing fix

--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -10,7 +10,7 @@
     margin: 0 auto;
 
     nav {
-      margin: 0 0 5px;
+      margin: 0 0 10px;
 
       ul {
         overflow: hidden; // to clear floated <li> children
